# hector

./: .dockerignore  .gitignore  .hector.yml  .ironlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  llms.txt
crates/hector-cli/: Cargo.toml
crates/hector-cli/src/: cli.rs  main.rs
crates/hector-cli/src/commands/: baseline.rs  check.rs  doctor.rs  explain.rs  guide.rs  migrate.rs  mod.rs  record_verdict.rs  schema.rs  session.rs  show_resolved_config.rs  trust.rs  update.rs  watch.rs
crates/hector-cli/tests/: adapter_claude_code.rs  adapter_reasonix.rs  cli_baseline.rs  cli_baseline_refresh.rs  cli_check.rs  cli_check_content.rs  cli_check_diff_cwd.rs  cli_check_diff_slice.rs  cli_check_exit_3.rs  cli_check_external_paths.rs  cli_check_single_load.rs  cli_deprecation.rs  cli_diff_read_error.rs  cli_e2e_check_quiet_stderr.rs  cli_e2e_doctor.rs  cli_e2e_emit_semantic_payload.rs  cli_e2e_explain.rs  cli_e2e_gates.rs  cli_e2e_guide.rs  cli_e2e_record_verdict.rs  cli_e2e_show_resolved_config.rs  cli_e2e_trust.rs  cli_e2e_update.rs  cli_e2e_watch.rs  cli_event_validation.rs  cli_init.rs  cli_init_onboarding.rs  cli_migrate.rs  cli_runner_telemetry_failure.rs  cli_schema.rs  cli_session.rs  cli_session_record.rs  cli_trust.rs  cli_v1_error.rs  cli_validate.rs  skills_gates_model.rs
crates/hector-cli/tests/snapshots/: cli_e2e_doctor__doctor_json_output_snapshot_for_clean_v2_config.snap  cli_e2e_explain__explain_lockfile_json.snap  cli_e2e_explain__explain_md_file_json.snap  cli_e2e_guide__guide_lockfile_json.snap  (+1 more)
docs/: README.md  doctor.md  (+9 more)
(+329 files in other folders)
